--- a/style2.css
+++ b/style2.css
@@ -1,40 +1,117 @@
-
-
-body{
-
+body {
   margin: 0px 70px 0px 70px;
   padding: 50px;
   font-family: Arial, Helvetica, sans-serif;
 }
-.main{
-  border:5px solid #f4f1f1;
+.main {
+  border: 5px solid #f4f1f1;
   height: 250px;
   border-radius: 20px;
   width: 405px;
-  position: absolute ;
+  position: absolute;
 
   background-color: rgb(255, 255, 255);
   top: 300px;
   left: 500px;
-  
 }
-.container{
+.container {
   display: flex;
   justify-content: space-between;
   width: 320px;
   border: 3px solid #f5f5f5;
   border-radius: 10px;
-  padding:0px 40px 0 40px;
+  padding: 0px 40px 0 40px;
   align-items: baseline;
 }
-.container2{
+.container2 {
   display: flex;
   justify-content: center;
-padding-top: 20px;
+  padding-top: 20px;
 }
-input[type=text] {
+input[type="text"] {
   width: 90%;
   padding: 8px 20px;
   margin: 8px 0;
   box-sizing: border-box;
+}
+.h3trip {
+  color: #00a5ec;
+  margin-left: 100px;
+}
+.backbutton {
+  display: flex;
+  margin-left: 380px;
+  margin-top: 90px;
+}
+.addnew {
+  display: flex;
+  margin-top: 90px;
+  margin-right: 480px;
+}
+.tpstyle {
+  margin-left: 100px;
+  margin-top: 30px;
+}
+.container3 {
+  display: flex;
+  width: 90px;
+  height: 1px;
+  background-color: #00a5ec;
+  border: 2px solid #00a5ec;
+  justify-content: center;
+  padding: 10px;
+  padding-bottom: 22px;
+  border-radius: 10px;
+
+  position: absolute;
+  left: 270px;
+
+  margin-top: 20px;
+}
+@media all and (min-width: 320px) and (max-width: 800px) {
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: #ededed;
+  }
+  .taskspan {
+    padding: 5px;
+  }
+  .h1task {
+    font-size: 18px;
+  }
+
+  .addnewText {
+    display: none;
+  }
+  .buttonbar {
+    justify-content: space-evenly;
+    left: 0px;
+  }
+  .addnew {
+    margin-left: 80px;
+  }
+  .backbutton {
+    margin-left: 40px;
+  }
+
+  .main {
+    width: 285px;
+    font-size: 12px;
+    left: 50px;
+  }
+  .container {
+    width: 205px;
+    font-size: 12px;
+  }
+  .h3trip {
+    margin-left: 0px;
+  }
+  .tpstyle {
+    margin-left: 40px;
+  }
+  .container3 {
+    width: 60px;
+    left: 180px;
+  }
 }
